Bindings/NIFToolset.Native/NIF.Native.RenderPipeline.h

NIFTOOLSET_NATIVE_ENTRY void NIF_RenderClick_SetRenderTargetGroup(NIF_RenderClickHandle renderClick, NIF_RenderTargetGroupHandle renderTargetGroup);
NIFTOOLSET_NATIVE_ENTRY int NIF_RenderClick_GetRenderTargetGroup(NIF_RenderClickHandle renderClick, NIF_RenderTargetGroupHandle* outRenderTargetGroup);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderClick_SetRenderTargetGroupDefault(NIF_RenderClickHandle renderClick);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderClick_Render(NIF_RenderClickHandle renderClick, unsigned int frameId);
NIFTOOLSET_NATIVE_ENTRY unsigned int NIF_RenderClick_GetNumObjectsDrawn(NIF_RenderClickHandle renderClick);
NIFTOOLSET_NATIVE_ENTRY float NIF_RenderClick_GetCullTime(NIF_RenderClickHandle renderClick);
NIFTOOLSET_NATIVE_ENTRY float NIF_RenderClick_GetRenderTime(NIF_RenderClickHandle renderClick);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderClick_ReleaseCaches(NIF_RenderClickHandle renderClick);
NIFTOOLSET_NATIVE_ENTRY void NIF_ViewRenderClick_Destroy(NIF_ViewRenderClickHandle renderClick);
NIFTOOLSET_NATIVE_ENTRY NIF_ViewRenderClickHandle NIF_ViewRenderClick_Create(void);
NIFTOOLSET_NATIVE_ENTRY int NIF_ViewRenderClick_AsRenderClick(NIF_ViewRenderClickHandle renderClick, NIF_RenderClickHandle* outRenderClick);
NIFTOOLSET_NATIVE_ENTRY void NIF_ViewRenderClick_AppendRenderView(NIF_ViewRenderClickHandle renderClick, NIF_RenderViewHandle renderView);
NIFTOOLSET_NATIVE_ENTRY void NIF_ViewRenderClick_PrependRenderView(NIF_ViewRenderClickHandle renderClick, NIF_RenderViewHandle renderView);
NIFTOOLSET_NATIVE_ENTRY void NIF_ViewRenderClick_RemoveRenderView(NIF_ViewRenderClickHandle renderClick, NIF_RenderViewHandle renderView);
NIFTOOLSET_NATIVE_ENTRY void NIF_ViewRenderClick_RemoveAllRenderViews(NIF_ViewRenderClickHandle renderClick);
NIFTOOLSET_NATIVE_ENTRY void NIF_ViewRenderClick_SetProcessor(NIF_ViewRenderClickHandle renderClick, NIF_RenderListProcessorHandle processor);
NIFTOOLSET_NATIVE_ENTRY int NIF_ViewRenderClick_GetProcessor(NIF_ViewRenderClickHandle renderClick, NIF_RenderListProcessorHandle* outProcessor);
NIFTOOLSET_NATIVE_ENTRY unsigned int NIF_ViewRenderClick_GetRenderViewCount(NIF_ViewRenderClickHandle renderClick);
NIFTOOLSET_NATIVE_ENTRY NIF_RenderViewHandle NIF_ViewRenderClick_GetRenderViewAt(NIF_ViewRenderClickHandle renderClick, unsigned int index);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderStep_Destroy(NIF_RenderStepHandle renderStep);
NIFTOOLSET_NATIVE_ENTRY const char* NIF_RenderStep_GetName(NIF_RenderStepHandle renderStep);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderStep_SetName(NIF_RenderStepHandle renderStep, const char* name);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderStep_Render(NIF_RenderStepHandle renderStep);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderStep_SetActive(NIF_RenderStepHandle renderStep, int active);
NIFTOOLSET_NATIVE_ENTRY int NIF_RenderStep_GetActive(NIF_RenderStepHandle renderStep);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderStep_SetPreCallback(NIF_RenderStepHandle renderStep, NIF_RenderStepCallback callback, void* userData);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderStep_SetPostCallback(NIF_RenderStepHandle renderStep, NIF_RenderStepCallback callback, void* userData);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderStep_ClearCallbacks(NIF_RenderStepHandle renderStep);
NIFTOOLSET_NATIVE_ENTRY unsigned int NIF_RenderStep_GetNumObjectsDrawn(NIF_RenderStepHandle renderStep);
NIFTOOLSET_NATIVE_ENTRY float NIF_RenderStep_GetCullTime(NIF_RenderStepHandle renderStep);
NIFTOOLSET_NATIVE_ENTRY float NIF_RenderStep_GetRenderTime(NIF_RenderStepHandle renderStep);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderStep_ReleaseCaches(NIF_RenderStepHandle renderStep);
NIFTOOLSET_NATIVE_ENTRY int NIF_RenderStep_SetOutputRenderTargetGroup(NIF_RenderStepHandle renderStep, NIF_RenderTargetGroupHandle renderTargetGroup);
NIFTOOLSET_NATIVE_ENTRY int NIF_RenderStep_GetOutputRenderTargetGroup(NIF_RenderStepHandle renderStep, NIF_RenderTargetGroupHandle* outRenderTargetGroup);
NIFTOOLSET_NATIVE_ENTRY void NIF_DefaultClickRenderStep_Destroy(NIF_DefaultClickRenderStepHandle renderStep);
NIFTOOLSET_NATIVE_ENTRY NIF_DefaultClickRenderStepHandle NIF_DefaultClickRenderStep_Create(void);
NIFTOOLSET_NATIVE_ENTRY int NIF_DefaultClickRenderStep_AsRenderStep(NIF_DefaultClickRenderStepHandle renderStep, NIF_RenderStepHandle* outRenderStep);
NIFTOOLSET_NATIVE_ENTRY void NIF_DefaultClickRenderStep_AppendRenderClick(NIF_DefaultClickRenderStepHandle renderStep, NIF_RenderClickHandle renderClick);
NIFTOOLSET_NATIVE_ENTRY void NIF_DefaultClickRenderStep_PrependRenderClick(NIF_DefaultClickRenderStepHandle renderStep, NIF_RenderClickHandle renderClick);
NIFTOOLSET_NATIVE_ENTRY void NIF_DefaultClickRenderStep_RemoveRenderClick(NIF_DefaultClickRenderStepHandle renderStep, NIF_RenderClickHandle renderClick);
NIFTOOLSET_NATIVE_ENTRY void NIF_DefaultClickRenderStep_RemoveAllRenderClicks(NIF_DefaultClickRenderStepHandle renderStep);
NIFTOOLSET_NATIVE_ENTRY unsigned int NIF_DefaultClickRenderStep_GetRenderClickCount(NIF_DefaultClickRenderStepHandle renderStep);
NIFTOOLSET_NATIVE_ENTRY NIF_RenderClickHandle NIF_DefaultClickRenderStep_GetRenderClickAt(NIF_DefaultClickRenderStepHandle renderStep, unsigned int index);