Bindings/NIFToolset.Managed/NativeMethods.cs

    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderClick_SetRenderTargetGroup(SafeRenderClickHandle renderClick, SafeRenderTargetGroupHandle renderTargetGroup);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_RenderClick_GetRenderTargetGroup(SafeRenderClickHandle renderClick, out SafeRenderTargetGroupHandle outRenderTargetGroup);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderClick_SetRenderTargetGroupDefault(SafeRenderClickHandle renderClick);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderClick_Render(SafeRenderClickHandle renderClick, uint frameId);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_RenderClick_GetNumObjectsDrawn(SafeRenderClickHandle renderClick);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern float NIF_RenderClick_GetCullTime(SafeRenderClickHandle renderClick);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern float NIF_RenderClick_GetRenderTime(SafeRenderClickHandle renderClick);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderClick_ReleaseCaches(SafeRenderClickHandle renderClick);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    internal static extern void NIF_ViewRenderClick_Destroy(nint handle);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeViewRenderClickHandle NIF_ViewRenderClick_Create();
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_ViewRenderClick_AsRenderClick(SafeViewRenderClickHandle renderClick, out SafeRenderClickHandle outRenderClick);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_ViewRenderClick_AppendRenderView(SafeViewRenderClickHandle renderClick, SafeRenderViewHandle renderView);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_ViewRenderClick_PrependRenderView(SafeViewRenderClickHandle renderClick, SafeRenderViewHandle renderView);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_ViewRenderClick_RemoveRenderView(SafeViewRenderClickHandle renderClick, SafeRenderViewHandle renderView);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_ViewRenderClick_RemoveAllRenderViews(SafeViewRenderClickHandle renderClick);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_ViewRenderClick_SetProcessor(SafeViewRenderClickHandle renderClick, SafeRenderListProcessorHandle processor);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_ViewRenderClick_GetProcessor(SafeViewRenderClickHandle renderClick, out SafeRenderListProcessorHandle outProcessor);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_ViewRenderClick_GetRenderViewCount(SafeViewRenderClickHandle renderClick);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeRenderViewHandle NIF_ViewRenderClick_GetRenderViewAt(SafeViewRenderClickHandle renderClick, uint index);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    internal static extern void NIF_RenderStep_Destroy(nint handle);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern nint NIF_RenderStep_GetName(SafeRenderStepHandle renderStep);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderStep_SetName(SafeRenderStepHandle renderStep, [MarshalAs(UnmanagedType.LPUTF8Str)] string? name);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderStep_Render(SafeRenderStepHandle renderStep);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderStep_SetActive(SafeRenderStepHandle renderStep, int active);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_RenderStep_GetActive(SafeRenderStepHandle renderStep);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderStep_SetPreCallback(SafeRenderStepHandle renderStep, RenderStepCallback? callback, nint userData);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderStep_SetPostCallback(SafeRenderStepHandle renderStep, RenderStepCallback? callback, nint userData);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderStep_ClearCallbacks(SafeRenderStepHandle renderStep);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_RenderStep_GetNumObjectsDrawn(SafeRenderStepHandle renderStep);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern float NIF_RenderStep_GetCullTime(SafeRenderStepHandle renderStep);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern float NIF_RenderStep_GetRenderTime(SafeRenderStepHandle renderStep);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderStep_ReleaseCaches(SafeRenderStepHandle renderStep);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_RenderStep_SetOutputRenderTargetGroup(SafeRenderStepHandle renderStep, SafeRenderTargetGroupHandle renderTargetGroup);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_RenderStep_GetOutputRenderTargetGroup(SafeRenderStepHandle renderStep, out SafeRenderTargetGroupHandle outRenderTargetGroup);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    internal static extern void NIF_DefaultClickRenderStep_Destroy(nint handle);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeDefaultClickRenderStepHandle NIF_DefaultClickRenderStep_Create();
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_DefaultClickRenderStep_AsRenderStep(SafeDefaultClickRenderStepHandle renderStep, out SafeRenderStepHandle outRenderStep);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_DefaultClickRenderStep_AppendRenderClick(SafeDefaultClickRenderStepHandle renderStep, SafeRenderClickHandle renderClick);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_DefaultClickRenderStep_PrependRenderClick(SafeDefaultClickRenderStepHandle renderStep, SafeRenderClickHandle renderClick);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_DefaultClickRenderStep_RemoveRenderClick(SafeDefaultClickRenderStepHandle renderStep, SafeRenderClickHandle renderClick);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_DefaultClickRenderStep_RemoveAllRenderClicks(SafeDefaultClickRenderStepHandle renderStep);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_DefaultClickRenderStep_GetRenderClickCount(SafeDefaultClickRenderStepHandle renderStep);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeRenderClickHandle NIF_DefaultClickRenderStep_GetRenderClickAt(SafeDefaultClickRenderStepHandle renderStep, uint index);
    #endregion
